testsuite/tests/rename/should_fail/T19843h.stderr
T19843h.hs:14:7: error: [GHC-39999]
    • No instance for ‘GHC.Internal.Records.HasField "mup" r4 a4’
        arising from selecting the field ‘mup’
    • In the expression: undefined.mup
      In an equation for ‘foo’: foo = undefined.mup
    Suggested fix: Perhaps use record field of A ‘mop’ (line 11)

T19843h.hs:16:7: error: [GHC-39999]
    • No instance for ‘GHC.Internal.Records.HasField "traverse" r3 a3’
        arising from selecting the field ‘traverse’
    • In the expression: undefined.traverse
      In an equation for ‘bar’: bar = undefined.traverse

T19843h.hs:18:7: error: [GHC-39999]
    • No instance for ‘GHC.Internal.Records.HasField "getSum" r2 a2’
        arising from selecting the field ‘getSum’
    • In the expression: undefined.getSum
      In an equation for ‘baz’: baz = undefined.getSum

T19843h.hs:20:8: error: [GHC-39999]
    • No instance for ‘GHC.Internal.Records.HasField "getAlt" r1 a1’
        arising from selecting the field ‘getAlt’
    • In the expression: undefined.getAlt
      In an equation for ‘quux’: quux = undefined.getAlt

T19843h.hs:24:8: error: [GHC-39999]
    • No instance for ‘GHC.Internal.Records.HasField "getAll" r0 a0’
        arising from selecting the field ‘getAll’
    • In the expression: undefined.getAll
      In an equation for ‘quur’: quur = undefined.getAll
    Suggested fixes:
      • Perhaps use record field of Alt ‘getAlt’ (imported from Data.Monoid)
      • Add ‘getAll’ to the import list in the import of ‘Data.Monoid’
        (at T19843h.hs:9:1-28).

